syntax = "proto3";

package servidor;

option java_multiple_files = true;
option java_package = "servidor";
option java_outer_classname = "ServidorProto";
option objc_class_prefix = "SV";


service ServidorFunc {
	rpc Enviar (EnviarRequest) returns (EnviarReply) {}

	rpc Listar (ListarRequest) returns (ListarReply) {}

	rpc Receber (ReceberRequest) returns (ReceberReply) {}

        rpc AdicionarServer (AddSvRequest) returns (AddSvReply) {}

        rpc RemoverServer (RmSvRequest) returns (RmSvReply) {}

        rpc Transferir (stream TransferirRequest) returns (TransferirReply) {}

        rpc RTransferir (RTransferirRequest) returns (stream RTransferirReply) {}

        rpc Ping (PingRequest) returns (PingReply) {}
}

message EnviarRequest {
	string data = 1;
	int64 tamanho = 2;
	string nome = 3;
	repeated bytes arquivo = 4;
}

message EnviarReply {
	string data = 1;
	string nome = 2;
	string status = 3;
}

message ListarRequest {

}

message ListarReply {
	string data = 1;
	repeated string nome = 2;
	string status = 3;
}

message ReceberRequest {
	string data = 1;
	string nome = 2;
}

message ReceberReply {
	string data = 1;
	string nome = 2;
        int64 tamanho = 3;
	repeated bytes arquivo = 4;
	string status = 5;
}

message AddSvRequest {
        string ip = 1;
        int32 porta = 2;
        string hash = 3;
        bool control = 4;
}

message AddSvReply {
        string status = 1;
}

message RmSvRequest {
        int64 numeroArquivos = 1;
}

message RmSvReply {
        string status = 1;
}

message TransferirRequest {
        string nome = 1;
        int64 tamanho = 2;
        repeated bytes arquivo = 3;
        int64 numeroArquivos = 4;
}

message TransferirReply {
        string status = 1;
        int64 arquivosRecebidos = 2;
}

message RTransferirRequest {
        int64 numeroArquivos = 1;
}

message RTransferirReply {
        string nome = 1;
        int64 tamanho = 2;
        repeated bytes arquivo = 3;
        int64 numeroArquivos = 4;
}

message PingRequest {
        string ip = 1;
        int32 porta = 2;
        string hash = 3;
}

message PingReply {

}